# flatimage

./: .dockerignore  .gitlab-ci.yml  LICENSE  README.md
.github/workflows/: release.yml
deploy/: common.sh  flatimage.sh
doc/: ext2-analysis.ods  ext2-analyze.sh  graph.flatimage.filesystem.dot  toc.sh
docker/: Dockerfile.boot  Dockerfile.bwrap_apparmor  Dockerfile.elf  Dockerfile.portal
examples/: firefox.sh  steam.sh
mime/: flatimage.xml
samples/: sample-steam.sh  steam.sh
sources/: apt.list  arch.list
src/boot/: CMakeLists.txt  boot.cpp  conanfile.txt  desktop.hpp  filesystems.hpp  janitor.cpp  magic.cpp  parser.hpp  portal.hpp  setup.hpp
src/boot/cmd/: bind.hpp  desktop.hpp  help.hpp  icon.hpp  layers.hpp
src/boot/compile_commands/: impl_setup_compile_commands.sh  setup_compile_commands.sh
src/boot/config/: config.hpp  environment.hpp
src/boot/desktop/: desktop.hpp
src/bwrap/: bwrap_apparmor.cpp
src/cpp/: common.hpp  config.hpp  dependencies.sh  enum.hpp  macro.hpp  permissions.hpp  setup.hpp  string.hpp  units.hpp
src/cpp/config/: environment.hpp  permissions.hpp
src/cpp/lib/: bwrap.hpp  ciopfs.hpp  db.hpp  dwarfs.hpp  e2fsck.hpp  elf.hpp  env.hpp  fifo.hpp  fuse.hpp  fuse2fs.hpp  image.hpp  ipc.hpp  linux.hpp  log.hpp  match.hpp  overlayfs.hpp  parser.hpp  reserved.hpp  squashfs.hpp  subprocess.hpp  unionfs.hpp
src/cpp/lib/db/: desktop.hpp
src/cpp/lib/ext2/: check.hpp  mount.hpp  size.hpp
src/cpp/lib/reserved/: desktop.hpp  notify.hpp  permissions.hpp
src/cpp/std/: concept.hpp  concepts.hpp  enum.hpp  env.hpp  exception.hpp  filesystem.hpp  functional.hpp  string.hpp  variant.hpp  vector.hpp
src/elf/: CMakeLists.txt  aliases.hpp  boot.h  conanfile.txt  concepts.hpp  fun.hpp  killer.h  magic.cpp  main.cpp
src/portal/: common.hpp  concepts.hpp  ipc.hpp  log.hpp  portal_guest.cpp  portal_host.cpp  string.hpp
src/scripts/: _aur.sh  _boot.sh  _build.sh  _common.sh  _killer.sh  _perms.sh  bwrap-profile.sh  bwrap.sh
src/xdg/: xdg-mime  xdg-open
